--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html data-wf-page="641b5e72069a0f4b3fff4113" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
-  <title> Ayo's Portfolio </title>
-  <meta content="Ayo's Portfolio" property="og:title">
+  <title>Ayo's Portfolio</title>
+  <meta content="Portfolio - Webflow HTML website template" property="og:title">
   <meta content="https://uploads-ssl.webflow.com/5c6e6f46bf98b2013cf621c5/5cdbf62c56d6dd3315e2b16b_Portfolio%20SEO.jpg" property="og:image">
   <meta content="Portfolio - Webflow HTML website template" property="twitter:title">
   <meta content="https://uploads-ssl.webflow.com/5c6e6f46bf98b2013cf621c5/5cdbf62c56d6dd3315e2b16b_Portfolio%20SEO.jpg" property="twitter:image">
@@ -540,7 +540,7 @@
                 <div class="uui-blogsection12_slide w-slide">
                   <div class="uui-blogsection12_item">
                     <a data-w-id="39be6bd7-2ad5-9051-fa41-232a7e1a0637" href="work/software-engineering.html" class="uui-blogsection12_image-link w-inline-block">
-                      <div class="uui-blogsection12_image-wrapper"><img srcset="images/2f378f9fb089a07929f3ccbc9e458f39-p-500.jpg 500w, images/2f378f9fb089a07929f3ccbc9e458f39.jpg 564w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 44vw, (max-width: 1439px) 29vw, 394.6171875px" src="images/2f378f9fb089a07929f3ccbc9e458f39.jpg" alt="" class="uui-blogsection12_image"></div>
+                      <div class="uui-blogsection12_image-wrapper"><img srcset="images/2f378f9fb089a07929f3ccbc9e458f39-p-500.jpg 500w, images/2f378f9fb089a07929f3ccbc9e458f39.jpg 564w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 44vw, (max-width: 1439px) 29vw, 394.609375px" src="images/2f378f9fb089a07929f3ccbc9e458f39.jpg" alt="" class="uui-blogsection12_image"></div>
                     </a>
                     <a data-w-id="39be6bd7-2ad5-9051-fa41-232a7e1a063d" href="work/software-engineering.html" class="uui-blogsection12_title-link-copy w-inline-block">
                       <h3 class="uui-heading-xsmall-12-copy">Software Engineering</h3>
@@ -553,7 +553,7 @@
                 <div class="uui-blogsection12_slide w-slide">
                   <div class="uui-blogsection12_item">
                     <a data-w-id="10fa1d7b-7526-1d5e-bcac-9aa3955cd64b" href="work/development-operations.html" class="uui-blogsection12_image-link w-inline-block">
-                      <div class="uui-blogsection12_image-wrapper"><img srcset="images/c32bde4da88b61811975e67fbaa2bc31-p-500.jpg 500w, images/c32bde4da88b61811975e67fbaa2bc31.jpg 564w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 44vw, (max-width: 1439px) 29vw, 394.6171875px" src="images/c32bde4da88b61811975e67fbaa2bc31.jpg" alt="" class="uui-blogsection12_image"></div>
+                      <div class="uui-blogsection12_image-wrapper"><img srcset="images/c32bde4da88b61811975e67fbaa2bc31-p-500.jpg 500w, images/c32bde4da88b61811975e67fbaa2bc31.jpg 564w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 44vw, (max-width: 1439px) 29vw, 394.609375px" src="images/c32bde4da88b61811975e67fbaa2bc31.jpg" alt="" class="uui-blogsection12_image"></div>
                     </a>
                     <a data-w-id="7ff0dd77-b44b-56b3-eba3-4829d3bf908c" href="work/development-operations.html" class="uui-blogsection12_title-link-copy w-inline-block">
                       <h3 class="uui-heading-xsmall-12-copy">Developmment Operations</h3>
@@ -566,7 +566,7 @@
                 <div class="uui-blogsection12_slide w-slide">
                   <div class="uui-blogsection12_item">
                     <a data-w-id="388a6fef-e8c8-c66e-eb35-064765cd7f25" href="work/scripting.html" class="uui-blogsection12_image-link w-inline-block">
-                      <div class="uui-blogsection12_image-wrapper"><img srcset="images/download-p-500.jpeg 500w, images/download.jpeg 1000w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 44vw, (max-width: 1439px) 29vw, 394.6171875px" src="images/download.jpeg" alt="" class="uui-blogsection12_image"></div>
+                      <div class="uui-blogsection12_image-wrapper"><img srcset="images/download-p-500.jpeg 500w, images/download.jpeg 1000w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 44vw, (max-width: 1439px) 29vw, 394.609375px" src="images/download.jpeg" alt="" class="uui-blogsection12_image"></div>
                     </a>
                     <a data-w-id="e33f4dd5-18e5-bba3-b938-793283def615" href="work/scripting.html" class="uui-blogsection12_title-link-copy w-inline-block">
                       <h3 class="uui-heading-xsmall-12-copy">Scripting</h3>
@@ -579,7 +579,7 @@
                 <div class="uui-blogsection12_slide w-slide">
                   <div class="uui-blogsection12_item">
                     <a data-w-id="ea96b599-a98a-9a51-528f-5bf8d18f8437" href="work/data-science-engineering.html" class="uui-blogsection12_image-link w-inline-block">
-                      <div class="uui-blogsection12_image-wrapper"><img srcset="images/9ba9a300779691124492c19d93e01933-p-500.jpg 500w, images/9ba9a300779691124492c19d93e01933.jpg 564w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 44vw, (max-width: 1439px) 29vw, 394.6171875px" src="images/9ba9a300779691124492c19d93e01933.jpg" alt="" class="uui-blogsection12_image"></div>
+                      <div class="uui-blogsection12_image-wrapper"><img srcset="images/9ba9a300779691124492c19d93e01933-p-500.jpg 500w, images/9ba9a300779691124492c19d93e01933.jpg 564w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 44vw, (max-width: 1439px) 29vw, 394.609375px" src="images/9ba9a300779691124492c19d93e01933.jpg" alt="" class="uui-blogsection12_image"></div>
                     </a>
                     <a data-w-id="c0f63314-3364-561b-f6ca-281a9269e13f" href="work/data-science-engineering.html" class="uui-blogsection12_title-link-copy w-inline-block">
                       <h3 class="uui-heading-xsmall-12-copy">Data Engineering and Science</h3>
@@ -973,40 +973,6 @@ height: 0.625rem;
   <div class="footer-wrap">
     <div>
       <a href="https://webflow.com/" target="_blank" class="webflow-link w-inline-block"><img src="images/ezgif.com-gif-maker-4.gif" width="15" alt="Logo" class="webflow-logo-tiny"></a>
-    </div>
-    <div class="footer-links">
-      <div class="div-block-10">
-        <a href="https://www.linkedin.com/in/ayo-akinnawo-978046141/" class="link-block-3 w-inline-block">
-          <div class="html-embed w-embed">
-            <?xml version="1.0" ?>
-            <!DOCTYPE svg PUBLIC '-//W3C//DTD SVG 1.1//EN' 'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'><svg enable-background="new 0 0 56.693 56.693" height="32px" id="Layer_1" version="1.1" viewbox="0 0 56.693 56.693" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-              <g>
-                <path d="M30.071,27.101v-0.077c-0.016,0.026-0.033,0.052-0.05,0.077H30.071z"></path>
-                <path d="M49.265,4.667H7.145c-2.016,0-3.651,1.596-3.651,3.563v42.613c0,1.966,1.635,3.562,3.651,3.562h42.12   c2.019,0,3.654-1.597,3.654-3.562V8.23C52.919,6.262,51.283,4.667,49.265,4.667z M18.475,46.304h-7.465V23.845h7.465V46.304z    M14.743,20.777h-0.05c-2.504,0-4.124-1.725-4.124-3.88c0-2.203,1.67-3.88,4.223-3.88c2.554,0,4.125,1.677,4.175,3.88   C18.967,19.052,17.345,20.777,14.743,20.777z M45.394,46.304h-7.465V34.286c0-3.018-1.08-5.078-3.781-5.078   c-2.062,0-3.29,1.389-3.831,2.731c-0.197,0.479-0.245,1.149-0.245,1.821v12.543h-7.465c0,0,0.098-20.354,0-22.459h7.465v3.179   c0.992-1.53,2.766-3.709,6.729-3.709c4.911,0,8.594,3.211,8.594,10.11V46.304z"></path>
-              </g>
-            </svg>
-          </div>
-        </a>
-        <a href="https://github.com/Ayokunlewaakinnawo?tab=repositories" class="w-inline-block">
-          <div class="html-embed-2 w-embed">
-            <?xml version="1.0" ?>
-            <!DOCTYPE svg PUBLIC '-//W3C//DTD SVG 1.0//EN' 'http://www.w3.org/TR/2001/REC-SVG-20010904/DTD/svg10.dtd'><svg enable-background="new 0 0 32 32" height="32px" id="Layer_1" version="1.0" viewbox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-              <path clip-rule="evenodd" d="M16.003,0C7.17,0,0.008,7.162,0.008,15.997  c0,7.067,4.582,13.063,10.94,15.179c0.8,0.146,1.052-0.328,1.052-0.752c0-0.38,0.008-1.442,0-2.777  c-4.449,0.967-5.371-2.107-5.371-2.107c-0.727-1.848-1.775-2.34-1.775-2.34c-1.452-0.992,0.109-0.973,0.109-0.973  c1.605,0.113,2.451,1.649,2.451,1.649c1.427,2.443,3.743,1.737,4.654,1.329c0.146-1.034,0.56-1.739,1.017-2.139  c-3.552-0.404-7.286-1.776-7.286-7.906c0-1.747,0.623-3.174,1.646-4.292C7.28,10.464,6.73,8.837,7.602,6.634  c0,0,1.343-0.43,4.398,1.641c1.276-0.355,2.645-0.532,4.005-0.538c1.359,0.006,2.727,0.183,4.005,0.538  c3.055-2.07,4.396-1.641,4.396-1.641c0.872,2.203,0.323,3.83,0.159,4.234c1.023,1.118,1.644,2.545,1.644,4.292  c0,6.146-3.74,7.498-7.304,7.893C19.479,23.548,20,24.508,20,26c0,2,0,3.902,0,4.428c0,0.428,0.258,0.901,1.07,0.746  C27.422,29.055,32,23.062,32,15.997C32,7.162,24.838,0,16.003,0z" fill="#181616" fill-rule="evenodd"></path>
-              <g>
-              <g>
-              <g>
-              <g>
-              <g>
-              <g>
-            </g></g></g></g></g></g></svg>
-          </div>
-        </a>
-        <a href="https://dribbble.com/Scarphase" class="link-block-8 w-inline-block">
-          <div class="html-embed-3 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-dribbble" viewbox="0 0 16 16">
-              <path fill-rule="evenodd" d="M8 0C3.584 0 0 3.584 0 8s3.584 8 8 8c4.408 0 8-3.584 8-8s-3.592-8-8-8zm5.284 3.688a6.802 6.802 0 0 1 1.545 4.251c-.226-.043-2.482-.503-4.755-.217-.052-.112-.096-.234-.148-.355-.139-.33-.295-.668-.451-.99 2.516-1.023 3.662-2.498 3.81-2.69zM8 1.18c1.735 0 3.323.65 4.53 1.718-.122.174-1.155 1.553-3.584 2.464-1.12-2.056-2.36-3.74-2.551-4A6.95 6.95 0 0 1 8 1.18zm-2.907.642A43.123 43.123 0 0 1 7.627 5.77c-3.193.85-6.013.833-6.317.833a6.865 6.865 0 0 1 3.783-4.78zM1.163 8.01V7.8c.295.01 3.61.053 7.02-.971.199.381.381.772.555 1.162l-.27.078c-3.522 1.137-5.396 4.243-5.553 4.504a6.817 6.817 0 0 1-1.752-4.564zM8 14.837a6.785 6.785 0 0 1-4.19-1.44c.12-.252 1.509-2.924 5.361-4.269.018-.009.026-.009.044-.017a28.246 28.246 0 0 1 1.457 5.18A6.722 6.722 0 0 1 8 14.837zm3.81-1.171c-.07-.417-.435-2.412-1.328-4.868 2.143-.338 4.017.217 4.251.295a6.774 6.774 0 0 1-2.924 4.573z"></path>
-            </svg></div>
-        </a>
-      </div>
     </div>
   </div>
   <div class="txt_anime">
